--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio responsive complete</title>
+        <title>Parwinder Singh Ranota</title>
     </head>
     <body>
         <!--===== HEADER =====-->
