--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
 
                         <input type="submit" value="Enviar" class="contact__button">
                     </form> -->
+
+                    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="parwindersinghranota" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ca.linkedin.com/in/parwindersinghranota?trk=profile-badge">Parwinder Singh Ranota</a></div>
+              
                 </div>
             </section>
         </main>
