--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
         <title>Parwinder Singh Ranota</title>
     </head>
