--- a/index.html
+++ b/index.html
@@ -1,172 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parwinder Singh Ranota | Full Stack Developer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Parwinder Singh Ranota | Full Stack Developer</title>
 
-    <!-- ===== CSS ===== -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- ===== BOX ICONS ===== -->
-    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+<!-- Box Icons -->
+<link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-    <!-- ===== GOOGLE FONTS ===== -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-    <style>
-        body { font-family: 'Roboto', sans-serif; background: #f8f9fa; margin:0; }
-        .section-title { font-size: 2rem; font-weight: 700; margin-bottom: 2rem; text-align:center; color:#007bff; }
-        header, footer { background: #1a1a1a; color: #fff; }
-        .nav__logo { font-weight: bold; font-size:1.3rem; }
-        .home { display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; text-align:center; background:#007bff; color:#fff; }
-        .home__title { font-size:3rem; line-height:1.2; font-weight:700; }
-        .home__img { width:200px; border-radius:50%; margin-top:2rem; }
-        .section { padding:4rem 2rem; }
-        .about__container, .skills__container, .portfolio__container, .contact__container { display:flex; flex-wrap:wrap; gap:2rem; justify-content:center; align-items:flex-start; }
-        .about__img img, .skills__img img { max-width:100%; border-radius:1rem; }
-        .skills__box, .contact__info { flex:1 1 300px; }
-        .skills__name { display:inline-block; margin:0.25rem 0.5rem; background:#007bff; color:#fff; padding:0.25rem 0.75rem; border-radius:0.5rem; font-size:0.9rem; }
-        .portfolio__img { position:relative; flex:1 1 250px; overflow:hidden; border-radius:1rem; cursor:pointer; }
-        .portfolio__img img { width:100%; transition:0.3s; }
-        .portfolio__img:hover img { transform:scale(1.1); }
-        .portfolio__link { position:absolute; bottom:0; width:100%; text-align:center; background:rgba(0,0,0,0.6); padding:0.5rem; opacity:0; transition:0.3s; }
-        .portfolio__img:hover .portfolio__link { opacity:1; }
-        .portfolio__link-name { color:#fff; text-decoration:none; font-weight:600; }
-        .contact__info span { display:block; margin-bottom:0.5rem; }
-        .footer { padding:2rem; text-align:center; background:#1a1a1a; color:#fff; }
-        .footer__link, .footer__social { color:#fff; text-decoration:none; margin-right:1rem; transition:0.3s; }
-        .footer__link:hover, .footer__social:hover { color:#007bff; }
-        @media(max-width:768px){ .home__title{ font-size:2.2rem; } .home__img{ width:150px; } }
-    </style>
+<style>
+  body { font-family: 'Roboto', sans-serif; margin:0; background:#f5f7fa; color:#333; }
+  header, footer { background:#0d6efd; color:#fff; padding:1rem; text-align:center; }
+  header h1 { margin:0; font-size:1.8rem; }
+  nav a { color:#fff; text-decoration:none; margin:0 0.5rem; font-weight:500; }
+  nav a:hover { text-decoration:underline; }
+  section { padding:3rem 1.5rem; max-width:1000px; margin:auto; }
+  .section-title { font-size:2rem; text-align:center; margin-bottom:2rem; color:#0d6efd; font-weight:700; }
+  .timeline { border-left:4px solid #0d6efd; margin-left:1rem; padding-left:1.5rem; }
+  .timeline-item { margin-bottom:2rem; position:relative; }
+  .timeline-item::before { content:""; position:absolute; left:-8px; top:0; width:16px; height:16px; background:#0d6efd; border-radius:50%; }
+  .card { background:#fff; padding:1.5rem; border-radius:0.75rem; box-shadow:0 2px 6px rgba(0,0,0,0.1); margin-bottom:1.5rem; }
+  .card h3 { margin-top:0; color:#0d6efd; }
+  .skills { display:flex; flex-wrap:wrap; gap:0.5rem; }
+  .skill-tag { background:#0d6efd; color:#fff; padding:0.4rem 0.8rem; border-radius:0.5rem; font-size:0.9rem; }
+  .contact-item { margin-bottom:0.75rem; }
+  @media(max-width:768px) { section { padding:2rem 1rem; } }
+</style>
 </head>
+
 <body>
 
-<!--===== HEADER =====-->
-<header class="l-header">
-    <nav class="nav bd-grid">
-        <div>
-            <a href="#" class="nav__logo">Parwinder Singh Ranota</a>
-        </div>
-        <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
-                <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-            </ul>
-        </div>
-        <div class="nav__toggle" id="nav-toggle"><i class='bx bx-menu'></i></div>
-    </nav>
+<header>
+  <h1>Parwinder Singh Ranota</h1>
+  <nav>
+    <a href="#about">About</a> |
+    <a href="#experience">Experience</a> |
+    <a href="#skills">Skills</a> |
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
-<main class="l-main">
+<main>
 
-    <!--===== HOME =====-->
-    <section class="home" id="home">
-        <h1 class="home__title">HELLO.<br><span>I'am Parwinder Singh Ranota</span></h1>
-        <p>Full Stack Developer | Android & iOS Apps | Java Backend | Microservices | SpringBoot</p>
-        <img src="assets/img/perfil.png" alt="Parwinder Singh Ranota" class="home__img">
-    </section>
+  <!-- ABOUT -->
+  <section id="about">
+    <h2 class="section-title">About Me</h2>
+    <div class="card">
+      <p>
+        I am an experienced Full Stack Developer and Senior Software Engineer with 11 years in software, web, and mobile application development. I specialize in Java, Spring Boot, Microservices, Android/iOS Apps, and modern cloud solutions. I have strong analytical and problem-solving skills and a proven ability to deliver scalable software solutions.
+      </p>
+    </div>
+  </section>
 
-    <!--===== ABOUT =====-->
-    <section class="about section" id="about">
-        <h2 class="section-title">About Me</h2>
-        <div class="about__container bd-grid">
-            <div class="about__img"><img src="assets/img/perfil.png" alt="Profile"></div>
-            <div>
-                <p>Experienced IT professional with 11 years in software, web, and mobile development. Skilled in translating business requirements into scalable, reusable software solutions.</p>
-                <ul>
-                    <li>Senior Software Developer at OpenText | Waterloo, ON, Canada (Jan 2024 – Present)</li>
-                    <li>Software Developer at Conestoga Research | Cambridge, ON (Jan 2023 – Apr 2024)</li>
-                    <li>Module Lead-2 at Bebo Technologies | Chandigarh, India (Oct 2017 – Apr 2022)</li>
-                    <li>Java Trainer & Senior Software Developer at Venus Mind Media | Amritsar, India (Jun 2011 – Jul 2017)</li>
-                </ul>
-                <div class="about__social">
-                    <a href="https://www.linkedin.com/in/parwindersinghranota/" target="_blank" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/parwindersinghranota" target="_blank" class="about__social-icon"><i class='bx bxl-github'></i></a>
-                </div>
-            </div>
+  <!-- EXPERIENCE -->
+  <section id="experience">
+    <h2 class="section-title">Work Experience</h2>
+    <div class="timeline">
+
+      <div class="timeline-item">
+        <div class="card">
+          <h3>Senior Software Developer | OpenText</h3>
+          <p><em>Waterloo, ON, Canada | Jan 2024 – Present</em></p>
+          <ul>
+            <li>Developed Terraform Providers in Golang for IoT Platform & Core Intelligence resource management.</li>
+            <li>Built Export to HCL utility using Spring Boot 3.0 & Java 17 for resource migration across environments.</li>
+            <li>Implemented microservices with Spring Boot and upgraded existing services to latest Java version.</li>
+            <li>Led Agile development cycles and CI/CD pipelines using TeamCity & GitLab.</li>
+            <li>Developed Java SE utility for QA automation to push test results into Value Edge platform.</li>
+          </ul>
         </div>
-    </section>
+      </div>
 
-    <!--===== SKILLS =====-->
-    <section class="skills section" id="skills">
-        <h2 class="section-title">Skills</h2>
-        <div class="skills__container bd-grid">
-            <div class="skills__box">
-                <h3>Development</h3>
-                <span class="skills__name">Java</span>
-                <span class="skills__name">Golang</span>
-                <span class="skills__name">Python</span>
-                <span class="skills__name">Spring Boot 2 & 3</span>
-                <span class="skills__name">Microservices</span>
-                <span class="skills__name">React JS</span>
-                <span class="skills__name">Angular</span>
-                <span class="skills__name">HTML/CSS/JS</span>
-                <span class="skills__name">Android/iOS Apps</span>
-
-                <h3>Databases</h3>
-                <span class="skills__name">Oracle</span>
-                <span class="skills__name">MySQL</span>
-                <span class="skills__name">MS SQL</span>
-                <span class="skills__name">Firebase</span>
-                <span class="skills__name">MongoDB</span>
-
-                <h3>DevOps & Tools</h3>
-                <span class="skills__name">Git</span>
-                <span class="skills__name">Docker/Kubernetes</span>
-                <span class="skills__name">JIRA</span>
-                <span class="skills__name">Azure DevOps</span>
-            </div>
-            <div class="skills__img"><img src="assets/img/skills.jpg" alt="Skills"></div>
+      <div class="timeline-item">
+        <div class="card">
+          <h3>Software Developer | Conestoga Research, Innovation & Entrepreneurship</h3>
+          <p><em>Cambridge, ON | Jan 2023 – Apr 2024</em></p>
+          <ul>
+            <li>Designed feature-rich iOS applications using Core Motion & Core Location frameworks.</li>
+            <li>Integrated machine learning for intelligent data analysis.</li>
+            <li>Managed User Stories and sprint execution using JIRA.</li>
+          </ul>
         </div>
-    </section>
+      </div>
 
-    <!--===== PORTFOLIO =====-->
-    <section class="portfolio section" id="portfolio">
-        <h2 class="section-title">Portfolio</h2>
-        <div class="portfolio__container bd-grid">
-            <div class="portfolio__img">
-                <img src="assets/img/work1.jpg" alt="">
-                <div class="portfolio__link"><a href="https://play.google.com/store/apps/details?id=parwinder.singh.livekirtan" class="portfolio__link-name">Live Kirtan App</a></div>
-            </div>
-            <div class="portfolio__img">
-                <img src="assets/img/work2.jpg" alt="">
-                <div class="portfolio__link"><a href="https://play.google.com/store/apps/details?id=com.sikhstudio.sikhi" class="portfolio__link-name">Sikhi App</a></div>
-            </div>
-            <div class="portfolio__img">
-                <img src="assets/img/work3.jpg" alt="">
-                <div class="portfolio__link"><a href="https://play.google.com/store/apps/details?id=parwinder.singh.sukhmanisahib" class="portfolio__link-name">Sukhmani Sahib App</a></div>
-            </div>
+      <div class="timeline-item">
+        <div class="card">
+          <h3>Module Lead-2 | Bebo Technologies</h3>
+          <p><em>Chandigarh, India | Oct 2017 – Apr 2022</em></p>
+          <ul>
+            <li>Developed enterprise solutions using Angular, J2EE, Java, Spring Boot 2, Microservices & Maven.</li>
+            <li>Implemented REST APIs, Microservices, and CI/CD pipelines using Jenkins & Docker/Kubernetes.</li>
+            <li>Optimized SQL queries, performed code reviews, and enhanced system performance.</li>
+            <li>Managed Agile processes and guided team as Module Lead.</li>
+          </ul>
         </div>
-    </section>
+      </div>
 
-    <!--===== CONTACT =====-->
-    <section class="contact section" id="contact">
-        <h2 class="section-title">Contact</h2>
-        <div class="contact__container bd-grid">
-            <div class="contact__info">
-                <h3>Email</h3>
-                <span>parwindersingh780@gmail.com</span>
-                <h3>Phone</h3>
-                <span>+1 (226) 978-6166</span>
-                <h3>Address</h3>
-                <span>Toronto, Canada</span>
-            </div>
+      <div class="timeline-item">
+        <div class="card">
+          <h3>Java Trainer | Senior Software Developer | Venus Mind Media</h3>
+          <p><em>Amritsar, Punjab, India | Jun 2011 – Jul 2017</em></p>
+          <ul>
+            <li>Full Stack development using Java, Spring, Hibernate, JSP, Angular & React JS.</li>
+            <li>Designed backend services, SQL procedures, REST APIs and Android mobile apps.</li>
+            <li>Mentored interns and implemented Remote Desktop Controller software for schools.</li>
+          </ul>
         </div>
-    </section>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- SKILLS -->
+  <section id="skills">
+    <h2 class="section-title">Technical Skills</h2>
+    <div class="card">
+      <h3>Programming & Backend</h3>
+      <div class="skills">
+        <span class="skill-tag">Java 8/11/17</span>
+        <span class="skill-tag">Golang</span>
+        <span class="skill-tag">Python</span>
+        <span class="skill-tag">Spring Boot 2/3</span>
+        <span class="skill-tag">Microservices</span>
+        <span class="skill-tag">REST APIs</span>
+        <span class="skill-tag">Hibernate</span>
+        <span class="skill-tag">SQL/Oracle/MySQL/Postgres</span>
+      </div>
+
+      <h3>Frontend & Mobile</h3>
+      <div class="skills">
+        <span class="skill-tag">React JS</span>
+        <span class="skill-tag">Angular</span>
+        <span class="skill-tag">HTML/CSS/JS</span>
+        <span class="skill-tag">Android Apps</span>
+        <span class="skill-tag">iOS Apps</span>
+      </div>
+
+      <h3>Tools & Cloud</h3>
+      <div class="skills">
+        <span class="skill-tag">Git</span>
+        <span class="skill-tag">Docker/Kubernetes</span>
+        <span class="skill-tag">JIRA</span>
+        <span class="skill-tag">Azure DevOps</span>
+        <span class="skill-tag">GCP & Firebase</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact">
+    <h2 class="section-title">Contact</h2>
+    <div class="card">
+      <div class="contact-item"><strong>Email:</strong> parwindersingh780@gmail.com</div>
+      <div class="contact-item"><strong>Phone:</strong> +1 (226) 978-6166</div>
+      <div class="contact-item"><strong>Location:</strong> Toronto, Canada</div>
+      <div class="contact-item">
+        <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/parwindersinghranota/" target="_blank">linkedin.com/in/parwindersinghranota</a>
+      </div>
+      <div class="contact-item">
+        <strong>GitHub:</strong> <a href="https://github.com/parwindersinghranota" target="_blank">github.com/parwindersinghranota</a>
+      </div>
+    </div>
+  </section>
 
 </main>
 
-<!--===== FOOTER =====-->
-<footer class="footer section">
-    <p>&copy; 2025 Parwinder Singh Ranota. All rights reserved.</p>
+<footer>
+  <p>&copy; 2025 Parwinder Singh Ranota. All Rights Reserved.</p>
 </footer>
 
-<!--===== SCROLL REVEAL =====-->
-<script src="https://unpkg.com/scrollreveal"></script>
-<script src="assets/js/main.js"></script>
 </body>
 </html>
