--- a/index.html
+++ b/index.html
@@ -9,24 +9,106 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
-    body { font-family: 'Roboto', sans-serif; background: #f8f9fa; color: #212529; }
-    header, footer { background-color: #0d6efd; color: #fff; padding: 1.5rem 0; text-align: center; }
-    header h1 { margin:0; font-weight: 700; }
-    header nav a { color: #fff; text-decoration: none; margin: 0 1rem; font-weight: 500; }
-    header nav a:hover { text-decoration: underline; }
-    section { padding: 3rem 1rem; max-width: 900px; margin: auto; }
-    .section-title { color: #0d6efd; font-weight: 700; margin-bottom: 2rem; text-align: center; }
-    .card { box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 1.5rem; }
-    .card h5 { color: #0d6efd; }
-    .skill-badge { background-color: #0d6efd; color: #fff; margin: 0.2rem; padding: 0.35rem 0.65rem; border-radius: 0.35rem; font-size: 0.85rem; display: inline-block; }
-    .timeline { border-left: 3px solid #0d6efd; padding-left: 1.5rem; margin-left: 0.5rem; }
-    .timeline-item { position: relative; margin-bottom: 2rem; }
-    .timeline-item::before { content: ''; position: absolute; left: -9px; top: 0; width: 18px; height: 18px; background-color: #0d6efd; border-radius: 50%; }
-    footer p { margin: 0; }
-    @media(max-width:768px){ section{ padding:2rem 1rem; } }
+    body { 
+      font-family: 'Roboto', sans-serif; 
+      background: #ffffff; 
+      color: #333333; 
+    }
+
+    header, footer { 
+      background-color: #f5f5f5; 
+      color: #333; 
+      padding: 1.5rem 0; 
+      text-align: center; 
+    }
+
+    header h1 { 
+      margin: 0; 
+      font-weight: 400; 
+      font-size: 2rem;
+    }
+
+    header nav a { 
+      color: #333; 
+      text-decoration: none; 
+      margin: 0 1rem; 
+      font-weight: 400; 
+    }
+
+    header nav a:hover { 
+      text-decoration: underline; 
+    }
+
+    section { 
+      padding: 3rem 1rem; 
+      max-width: 900px; 
+      margin: auto; 
+    }
+
+    .section-title { 
+      color: #111; 
+      margin-bottom: 2rem; 
+      text-align: center; 
+      font-weight: 400; 
+      font-size: 1.8rem;
+    }
+
+    .card { 
+      background-color: #f9f9f9; 
+      box-shadow: 0 1px 4px rgba(0,0,0,0.08); 
+      margin-bottom: 1.5rem; 
+    }
+
+    .card h5 { 
+      color: #111; 
+      font-weight: 400; 
+    }
+
+    .skill-badge { 
+      background-color: #333; 
+      color: #fff; 
+      margin: 0.2rem; 
+      padding: 0.35rem 0.65rem; 
+      border-radius: 0.35rem; 
+      font-size: 0.85rem; 
+      display: inline-block; 
+    }
+
+    .timeline { 
+      border-left: 2px solid #333; 
+      padding-left: 1.5rem; 
+      margin-left: 0.5rem; 
+    }
+
+    .timeline-item { 
+      position: relative; 
+      margin-bottom: 2rem; 
+    }
+
+    .timeline-item::before { 
+      content: ''; 
+      position: absolute; 
+      left: -8px; 
+      top: 0; 
+      width: 16px; 
+      height: 16px; 
+      background-color: #333; 
+      border-radius: 50%; 
+    }
+
+    footer p { 
+      margin: 0; 
+      font-weight: 300; 
+      color: #555;
+    }
+
+    @media(max-width:768px){ 
+      section{ padding:2rem 1rem; } 
+      header h1 { font-size: 1.6rem; }
+    }
   </style>
 </head>
 <body>
@@ -48,7 +130,7 @@
     <h2 class="section-title">About Me</h2>
     <div class="card p-4">
       <p>
-        I am a Full Stack Developer and Senior Software Engineer with 11 years of experience in software, web, and mobile application development. I specialize in Java, Spring Boot, Microservices, Android & iOS development, cloud platforms, and modern software architectures. I have strong analytical and problem-solving skills with a proven ability to deliver scalable software solutions.
+        I am a Full Stack Developer and Senior Software Engineer with 14 years of experience in software, web, and mobile application development. I specialize in Java, Spring Boot, Microservices, Android & iOS development, cloud platforms, and modern software architectures. I possess strong analytical skills and deliver scalable, maintainable software solutions.
       </p>
     </div>
   </section>
@@ -63,10 +145,10 @@
           <h5>Senior Software Developer | OpenText</h5>
           <small class="text-muted">Waterloo, ON, Canada | Jan 2024 – Present</small>
           <ul class="mt-2 mb-0">
-            <li>Developed Terraform Providers in Golang for Aviator IoT Platform & Core Intelligence resource management.</li>
-            <li>Created Export to HCL utility using Spring Boot 3.0 & Java 17 to migrate resources across environments.</li>
-            <li>Implemented microservices using Spring Boot 3.0, upgraded existing services to latest Java version.</li>
-            <li>Led Agile development cycles and implemented CI/CD pipelines using TeamCity & GitLab.</li>
+            <li>Developed Terraform Providers in Golang for Aviator IoT Platform & Core Intelligence.</li>
+            <li>Created Export to HCL utility using Spring Boot 3.0 & Java 17 for resource migration.</li>
+            <li>Implemented microservices using Spring Boot 3.0 and upgraded existing services.</li>
+            <li>Managed Agile development cycles and CI/CD pipelines using TeamCity & GitLab.</li>
           </ul>
         </div>
       </div>
@@ -76,9 +158,9 @@
           <h5>Software Developer | Conestoga Research</h5>
           <small class="text-muted">Cambridge, ON | Jan 2023 – Apr 2024</small>
           <ul class="mt-2 mb-0">
-            <li>Designed iOS applications using device sensors (Core Motion, Core Location) for context-aware functionalities.</li>
+            <li>Designed iOS applications using device sensors for context-aware functionalities.</li>
             <li>Integrated machine learning algorithms for intelligent data analysis.</li>
-            <li>Managed user stories, sprint planning, and backlog in JIRA for Agile development.</li>
+            <li>Managed Agile sprints, user stories, and backlog in JIRA.</li>
           </ul>
         </div>
       </div>
@@ -90,8 +172,8 @@
           <ul class="mt-2 mb-0">
             <li>Developed enterprise solutions using Angular, Java, Spring Boot, Microservices & Maven.</li>
             <li>Implemented REST APIs, CI/CD pipelines, and Docker/Kubernetes deployments.</li>
-            <li>Optimized SQL queries, performed code reviews, and improved application performance.</li>
-            <li>Led Agile teams as Module Lead and maintained software documentation with Confluence & Swagger.</li>
+            <li>Optimized SQL queries and performed code reviews to improve performance.</li>
+            <li>Led Agile teams and maintained documentation with Confluence & Swagger.</li>
           </ul>
         </div>
       </div>
@@ -102,7 +184,7 @@
           <small class="text-muted">Amritsar, Punjab, India | Jun 2011 – Jul 2017</small>
           <ul class="mt-2 mb-0">
             <li>Full Stack development using Java, Spring, Hibernate, JSP, Angular & React JS.</li>
-            <li>Designed backend services, REST APIs, SQL procedures, and Android applications.</li>
+            <li>Designed backend services, REST APIs, SQL procedures, and Android apps.</li>
             <li>Mentored interns and implemented Remote Desktop Controller software for school labs.</li>
           </ul>
         </div>
