--- a/index.html
+++ b/index.html
@@ -12,101 +12,111 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
-    body { 
-      font-family: 'Roboto', sans-serif; 
-      background: #ffffff; 
-      color: #333333; 
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #ffffff;
+      color: #222;
     }
 
-    header, footer { 
-      background-color: #f5f5f5; 
-      color: #333; 
-      padding: 1.5rem 0; 
-      text-align: center; 
+    header, footer {
+      background-color: #f0f0f0;
+      color: #222;
+      padding: 1.5rem 0;
+      text-align: center;
     }
 
-    header h1 { 
-      margin: 0; 
-      font-weight: 400; 
+    header h1 {
+      margin: 0;
+      font-weight: 400;
       font-size: 2rem;
     }
 
-    header nav a { 
-      color: #333; 
-      text-decoration: none; 
-      margin: 0 1rem; 
-      font-weight: 400; 
+    header nav a {
+      color: #222;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: 400;
     }
 
-    header nav a:hover { 
-      text-decoration: underline; 
+    header nav a:hover {
+      text-decoration: underline;
     }
 
-    section { 
-      padding: 3rem 1rem; 
-      max-width: 900px; 
-      margin: auto; 
+    section {
+      padding: 3rem 1rem;
+      max-width: 900px;
+      margin: auto;
     }
 
-    .section-title { 
-      color: #111; 
-      margin-bottom: 2rem; 
-      text-align: center; 
-      font-weight: 400; 
+    .section-title {
+      color: #111;
+      margin-bottom: 2rem;
+      text-align: center;
+      font-weight: 400;
       font-size: 1.8rem;
     }
 
-    .card { 
-      background-color: #f9f9f9; 
-      box-shadow: 0 1px 4px rgba(0,0,0,0.08); 
-      margin-bottom: 1.5rem; 
+    .card {
+      background-color: #f9f9f9;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+      margin-bottom: 1.5rem;
+      border: none;
     }
 
-    .card h5 { 
-      color: #111; 
-      font-weight: 400; 
+    .card h5 {
+      color: #111;
+      font-weight: 400;
     }
 
-    .skill-badge { 
-      background-color: #333; 
-      color: #fff; 
-      margin: 0.2rem; 
-      padding: 0.35rem 0.65rem; 
-      border-radius: 0.35rem; 
-      font-size: 0.85rem; 
-      display: inline-block; 
+    .skill-badge {
+      background-color: #222;
+      color: #fff;
+      margin: 0.2rem;
+      padding: 0.35rem 0.65rem;
+      border-radius: 0.35rem;
+      font-size: 0.85rem;
+      display: inline-block;
     }
 
-    .timeline { 
-      border-left: 2px solid #333; 
-      padding-left: 1.5rem; 
-      margin-left: 0.5rem; 
+    .timeline {
+      border-left: 2px solid #222;
+      padding-left: 1.5rem;
+      margin-left: 0.5rem;
     }
 
-    .timeline-item { 
-      position: relative; 
-      margin-bottom: 2rem; 
+    .timeline-item {
+      position: relative;
+      margin-bottom: 2rem;
     }
 
-    .timeline-item::before { 
-      content: ''; 
-      position: absolute; 
-      left: -8px; 
-      top: 0; 
-      width: 16px; 
-      height: 16px; 
-      background-color: #333; 
-      border-radius: 50%; 
+    .timeline-item::before {
+      content: '';
+      position: absolute;
+      left: -8px;
+      top: 0;
+      width: 16px;
+      height: 16px;
+      background-color: #222;
+      border-radius: 50%;
     }
 
-    footer p { 
-      margin: 0; 
-      font-weight: 300; 
+    footer p {
+      margin: 0;
+      font-weight: 300;
       color: #555;
     }
 
-    @media(max-width:768px){ 
-      section{ padding:2rem 1rem; } 
+    a {
+      color: #222;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @media(max-width:768px){
+      section{ padding:2rem 1rem; }
       header h1 { font-size: 1.6rem; }
     }
   </style>
@@ -119,6 +129,7 @@
     <a href="#about">About</a>
     <a href="#experience">Experience</a>
     <a href="#skills">Skills</a>
+    <a href="#education">Education</a>
     <a href="#contact">Contact</a>
   </nav>
 </header>
@@ -130,7 +141,7 @@
     <h2 class="section-title">About Me</h2>
     <div class="card p-4">
       <p>
-        I am a Full Stack Developer and Senior Software Engineer with 14 years of experience in software, web, and mobile application development. I specialize in Java, Spring Boot, Microservices, Android & iOS development, cloud platforms, and modern software architectures. I possess strong analytical skills and deliver scalable, maintainable software solutions.
+        I am a Full Stack Developer and Senior Software Engineer with 11 years of experience in software, web, and mobile application development. I specialize in Java, Spring Boot, Microservices, Android & iOS development, cloud platforms, and modern software architectures. I possess strong analytical skills and deliver scalable, maintainable software solutions.
       </p>
     </div>
   </section>
@@ -146,21 +157,23 @@
           <small class="text-muted">Waterloo, ON, Canada | Jan 2024 – Present</small>
           <ul class="mt-2 mb-0">
             <li>Developed Terraform Providers in Golang for Aviator IoT Platform & Core Intelligence.</li>
-            <li>Created Export to HCL utility using Spring Boot 3.0 & Java 17 for resource migration.</li>
-            <li>Implemented microservices using Spring Boot 3.0 and upgraded existing services.</li>
-            <li>Managed Agile development cycles and CI/CD pipelines using TeamCity & GitLab.</li>
+            <li>Created Export to HCL utility using Spring Boot 3.0 & Java 17 for resource migration across IoT realms.</li>
+            <li>Implemented microservices using Spring Boot 3.0 and upgraded existing services to Java 17.</li>
+            <li>Led Agile development including requirement gathering, story analysis, design, development, and testing.</li>
+            <li>Implemented and monitored CI/CD pipelines using TeamCity & GitLab.</li>
+            <li>Developed Java SE executable utility for automated QA test results integration into Value Edge platform.</li>
           </ul>
         </div>
       </div>
 
       <div class="timeline-item">
         <div class="card p-3">
-          <h5>Software Developer | Conestoga Research</h5>
+          <h5>Software Developer | Conestoga Research, Innovation & Entrepreneurship</h5>
           <small class="text-muted">Cambridge, ON | Jan 2023 – Apr 2024</small>
           <ul class="mt-2 mb-0">
-            <li>Designed iOS applications using device sensors for context-aware functionalities.</li>
-            <li>Integrated machine learning algorithms for intelligent data analysis.</li>
-            <li>Managed Agile sprints, user stories, and backlog in JIRA.</li>
+            <li>Designed and developed iOS applications using Core Motion & Core Location frameworks.</li>
+            <li>Integrated machine learning algorithms for real-time intelligent data processing.</li>
+            <li>Managed User Stories and backlog in JIRA, led sprint planning and retrospectives.</li>
           </ul>
         </div>
       </div>
@@ -170,10 +183,11 @@
           <h5>Module Lead-2 | Bebo Technologies</h5>
           <small class="text-muted">Chandigarh, India | Oct 2017 – Apr 2022</small>
           <ul class="mt-2 mb-0">
-            <li>Developed enterprise solutions using Angular, Java, Spring Boot, Microservices & Maven.</li>
-            <li>Implemented REST APIs, CI/CD pipelines, and Docker/Kubernetes deployments.</li>
-            <li>Optimized SQL queries and performed code reviews to improve performance.</li>
-            <li>Led Agile teams and maintained documentation with Confluence & Swagger.</li>
+            <li>Developed Enterprise Solutions using Angular, Java, Spring Boot, Microservices & Maven for clients like Ernst & Young, NEA.</li>
+            <li>Implemented REST APIs, Microservices, CI/CD pipelines, and Docker/Kubernetes deployment.</li>
+            <li>Created automated scheduling jobs and notifications using Microservices and GCP Messaging Platform.</li>
+            <li>Optimized SQL queries and performed code reviews, resolving merge conflicts with Git.</li>
+            <li>Led Agile teams, documented APIs & software using Swagger and Confluence.</li>
           </ul>
         </div>
       </div>
@@ -183,9 +197,9 @@
           <h5>Java Trainer | Senior Software Developer | Venus Mind Media</h5>
           <small class="text-muted">Amritsar, Punjab, India | Jun 2011 – Jul 2017</small>
           <ul class="mt-2 mb-0">
-            <li>Full Stack development using Java, Spring, Hibernate, JSP, Angular & React JS.</li>
-            <li>Designed backend services, REST APIs, SQL procedures, and Android apps.</li>
-            <li>Mentored interns and implemented Remote Desktop Controller software for school labs.</li>
+            <li>Full Stack development using Java, Struts, Spring, Hibernate, SQL, JSP, React JS, Angular, HTML5/CSS3/JS.</li>
+            <li>Designed backend services, REST APIs, SQL procedures, and Android mobile applications.</li>
+            <li>Mentored interns, implemented Remote Desktop Controller software for school labs.</li>
           </ul>
         </div>
       </div>
@@ -202,11 +216,13 @@
         <span class="skill-badge">Java 8/11/17</span>
         <span class="skill-badge">Golang</span>
         <span class="skill-badge">Python</span>
-        <span class="skill-badge">Spring Boot</span>
+        <span class="skill-badge">PHP</span>
+        <span class="skill-badge">TypeScript</span>
+        <span class="skill-badge">Spring Boot 2/3</span>
         <span class="skill-badge">Microservices</span>
-        <span class="skill-badge">REST APIs</span>
         <span class="skill-badge">Hibernate</span>
-        <span class="skill-badge">SQL / Oracle / MySQL / Postgres</span>
+        <span class="skill-badge">SQL/Oracle/MySQL/Postgres</span>
+        <span class="skill-badge">Kafka/RabbitMQ</span>
       </div>
 
       <h5>Frontend & Mobile</h5>
@@ -214,18 +230,32 @@
         <span class="skill-badge">React JS</span>
         <span class="skill-badge">Angular</span>
         <span class="skill-badge">HTML/CSS/JS</span>
-        <span class="skill-badge">Android</span>
-        <span class="skill-badge">iOS</span>
+        <span class="skill-badge">Bootstrap 5 / Material UI</span>
+        <span class="skill-badge">Android (Java)</span>
+        <span class="skill-badge">iOS / Swift</span>
+        <span class="skill-badge">React Native</span>
       </div>
 
       <h5>Tools & Cloud</h5>
       <div class="mt-2">
-        <span class="skill-badge">Git</span>
-        <span class="skill-badge">Docker/Kubernetes</span>
-        <span class="skill-badge">JIRA</span>
-        <span class="skill-badge">Azure DevOps</span>
-        <span class="skill-badge">GCP & Firebase</span>
+        <span class="skill-badge">Git / SVN</span>
+        <span class="skill-badge">Docker / Kubernetes</span>
+        <span class="skill-badge">JIRA / Azure DevOps / Value Edge</span>
+        <span class="skill-badge">GCP / Firebase / AWS</span>
+        <span class="skill-badge">Apache Tomcat</span>
       </div>
+    </div>
+  </section>
+
+  <!-- EDUCATION -->
+  <section id="education">
+    <h2 class="section-title">Education</h2>
+    <div class="card p-3">
+      <ul class="mb-0">
+        <li><strong>Mobile Solution Development (MSD)</strong> - Conestoga College, Waterloo, ON, Canada | GPA: 3.65 | May 2022 – Aug 2023</li>
+        <li><strong>Master of Computer Applications (MCA)</strong> - Guru Nanak Dev University, Amritsar, India | 73% | Jun 2008 – May 2011</li>
+        <li><strong>Bachelor of Computer Applications (BCA)</strong> - Conestoga College, Waterloo, ON, Canada | 75% | Apr 2005 – Apr 2008</li>
+      </ul>
     </div>
   </section>
 
@@ -249,6 +279,5 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
