--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parwinder Singh Ranota | Full Stack Developer</title>
+  <title>Parwinder Singh Ranota | Resume</title>
 
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,22 +14,29 @@
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background: #ffffff;
+      background-color: #fff;
       color: #222;
       line-height: 1.6;
     }
 
-    header, footer {
-      background-color: #f0f0f0;
-      color: #222;
+    header {
+      background-color: #f5f5f5;
       padding: 2rem 1rem;
       text-align: center;
+      border-bottom: 1px solid #ddd;
     }
 
     header h1 {
-      margin: 0;
       font-weight: 400;
-      font-size: 2.2rem;
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    header p {
+      font-weight: 300;
+      margin-bottom: 0;
+      font-size: 0.95rem;
+      color: #555;
     }
 
     section {
@@ -39,36 +46,26 @@
     }
 
     .section-title {
-      color: #111;
-      margin-bottom: 2rem;
-      text-align: center;
       font-weight: 400;
       font-size: 1.8rem;
+      text-align: center;
       border-bottom: 1px solid #ddd;
       padding-bottom: 0.5rem;
+      margin-bottom: 2rem;
+      color: #111;
     }
 
     .card {
       background-color: #f9f9f9;
       box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+      padding: 1.5rem;
       margin-bottom: 1.5rem;
       border: none;
-      padding: 1.5rem;
     }
 
     .card h5 {
-      color: #111;
       font-weight: 400;
-    }
-
-    .skill-badge {
-      background-color: #222;
-      color: #fff;
-      margin: 0.2rem;
-      padding: 0.35rem 0.65rem;
-      border-radius: 0.35rem;
-      font-size: 0.85rem;
-      display: inline-block;
+      color: #111;
     }
 
     .timeline {
@@ -85,12 +82,30 @@
     .timeline-item::before {
       content: '';
       position: absolute;
-      left: -8px;
+      left: -9px;
       top: 0;
-      width: 16px;
-      height: 16px;
+      width: 18px;
+      height: 18px;
       background-color: #222;
       border-radius: 50%;
+    }
+
+    .skill-badge {
+      background-color: #222;
+      color: #fff;
+      margin: 0.2rem;
+      padding: 0.35rem 0.65rem;
+      border-radius: 0.35rem;
+      font-size: 0.85rem;
+      display: inline-block;
+    }
+
+    footer {
+      background-color: #f5f5f5;
+      text-align: center;
+      padding: 2rem 1rem;
+      margin-top: 2rem;
+      border-top: 1px solid #ddd;
     }
 
     footer p {
@@ -110,7 +125,7 @@
 
     @media(max-width:768px){
       section{ padding:2rem 1rem; }
-      header h1 { font-size: 1.8rem; }
+      header h1 { font-size: 1.6rem; }
     }
   </style>
 </head>
@@ -118,67 +133,61 @@
 
 <header>
   <h1>Parwinder Singh Ranota</h1>
-  <p>Full Stack Developer | Android & iOS App Development | Java Backend | Spring Boot | Microservices</p>
+  <p>13+ Years Experience | Full Stack Developer | parwindersingh780@gmail.com | +1 (226) 978-6166</p>
 </header>
 
 <main>
 
-  <!-- ABOUT -->
-  <section id="about">
-    <h2 class="section-title">About Me</h2>
-    <div class="card">
-      <p>
-        I am a Full Stack Developer and Senior Software Engineer with 11 years of experience in software, web, and mobile application development. I specialize in Java, Spring Boot, Microservices, Android & iOS development, cloud platforms, and modern software architectures. I possess strong analytical skills and deliver scalable, maintainable software solutions.
-      </p>
-    </div>
-  </section>
-
-  <!-- EXPERIENCE -->
+  <!-- Work Experience -->
   <section id="experience">
     <h2 class="section-title">Work Experience</h2>
     <div class="timeline">
 
+      <!-- OpenText -->
       <div class="timeline-item">
         <div class="card">
           <h5>Senior Software Developer | OpenText</h5>
           <small class="text-muted">Waterloo, ON, Canada | Jan 2024 – Present</small>
           <ul class="mt-2 mb-0">
-            <li>Developed Terraform Providers in Golang for Aviator IoT Platform & Core Intelligence.</li>
+            <li>Developed and maintained Terraform Providers using Golang for Aviator IoT Platform & Core Intelligence.</li>
             <li>Created Export to HCL utility using Spring Boot 3.0 & Java 17 for resource migration across IoT realms.</li>
             <li>Implemented microservices using Spring Boot 3.0 and upgraded existing services to Java 17.</li>
             <li>Led Agile development including requirement gathering, story analysis, design, development, and testing.</li>
             <li>Implemented and monitored CI/CD pipelines using TeamCity & GitLab.</li>
-            <li>Developed Java SE executable utility for automated QA test results integration into Value Edge platform.</li>
+            <li>Developed Java SE utility to integrate automated QA test results into Value Edge platform.</li>
           </ul>
         </div>
       </div>
 
+      <!-- Conestoga Research -->
       <div class="timeline-item">
         <div class="card">
           <h5>Software Developer | Conestoga Research, Innovation & Entrepreneurship</h5>
           <small class="text-muted">Cambridge, ON | Jan 2023 – Apr 2024</small>
           <ul class="mt-2 mb-0">
-            <li>Designed and developed iOS applications using Core Motion & Core Location frameworks.</li>
+            <li>Designed and developed feature-rich iOS applications using Core Motion & Core Location frameworks.</li>
             <li>Integrated machine learning algorithms for real-time intelligent data processing.</li>
-            <li>Managed User Stories and backlog in JIRA, led sprint planning and retrospectives.</li>
+            <li>Managed User Stories and backlog using JIRA; led sprint planning and retrospectives.</li>
           </ul>
         </div>
       </div>
 
+      <!-- Bebo Technologies -->
       <div class="timeline-item">
         <div class="card">
           <h5>Module Lead-2 | Bebo Technologies</h5>
           <small class="text-muted">Chandigarh, India | Oct 2017 – Apr 2022</small>
           <ul class="mt-2 mb-0">
-            <li>Developed Enterprise Solutions using Angular, Java, Spring Boot, Microservices & Maven for clients like Ernst & Young, NEA.</li>
+            <li>Developed Enterprise Solutions using Angular, Java, Spring Boot, Microservices & Maven.</li>
             <li>Implemented REST APIs, Microservices, CI/CD pipelines, and Docker/Kubernetes deployment.</li>
-            <li>Created automated scheduling jobs and notifications using Microservices and GCP Messaging Platform.</li>
-            <li>Optimized SQL queries and performed code reviews, resolving merge conflicts with Git.</li>
+            <li>Automated workflow tasks and notifications using Microservices & GCP Messaging.</li>
+            <li>Optimized SQL queries, performed code reviews, and resolved Git merge conflicts.</li>
             <li>Led Agile teams, documented APIs & software using Swagger and Confluence.</li>
           </ul>
         </div>
       </div>
 
+      <!-- Venus Mind Media -->
       <div class="timeline-item">
         <div class="card">
           <h5>Java Trainer | Senior Software Developer | Venus Mind Media</h5>
@@ -186,7 +195,7 @@
           <ul class="mt-2 mb-0">
             <li>Full Stack development using Java, Struts, Spring, Hibernate, SQL, JSP, React JS, Angular, HTML5/CSS3/JS.</li>
             <li>Designed backend services, REST APIs, SQL procedures, and Android mobile applications.</li>
-            <li>Mentored interns, implemented Remote Desktop Controller software for school labs.</li>
+            <li>Mentored interns and implemented Remote Desktop Controller software for school labs.</li>
           </ul>
         </div>
       </div>
@@ -194,7 +203,7 @@
     </div>
   </section>
 
-  <!-- SKILLS -->
+  <!-- Technical Skills -->
   <section id="skills">
     <h2 class="section-title">Technical Skills</h2>
     <div class="card">
@@ -234,7 +243,7 @@
     </div>
   </section>
 
-  <!-- EDUCATION -->
+  <!-- Education -->
   <section id="education">
     <h2 class="section-title">Education</h2>
     <div class="card">
@@ -246,7 +255,7 @@
     </div>
   </section>
 
-  <!-- CONTACT -->
+  <!-- Contact -->
   <section id="contact">
     <h2 class="section-title">Contact</h2>
     <div class="card">
